Second commit all main design and features done